# secureDNS

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  LICENSE.md  Makefile  README.md  addrinfo.c  addrinfo.h  dns.h  dns_context.c  original_dns.c  original_dns.h  resource_records.c  simple_test.cpp  wrapper_dns.c
docs/: api.md  install.md  primer.md
include/: dns.h  securedns.h
src/: addrinfo.c  cache.c  cache.h  dns_cache.c  dns_cache.h  dns_context.c  dns_context.h  dns_hashmap.c  original_dns.c  original_dns.h  records_cache.c  records_cache.h  resource_records.c  resource_records.h  saved_contexts.c  saved_contexts.h  str_hashmap.c  str_hashmap.h  wrapper_dns.c
tests/: async_test.c  async_test.cpp  poll_test.c  poll_test.cpp  simple_test.c  simple_test.cpp
